# AirlocUnlock

./: ProjetAirBnb.bsdesign  index.html
AirLocUnclock/App_airlocunlock/: settings.gradle
AirLocUnclock/Modif/: AIRLOCKUNLOCK.bsdesign
AirLocUnclock/Site_AirlocUnlock/30.03/: Inscription.html  Login.html  MapTest.html  MettreEnLoc.html  PageReserv.php  TestCard.html  contacts.html  forgotpassword.html  index.html  pricing.html  projects.html  services.html
AirLocUnclock/Site_AirlocUnlock/Testmap/: map.js  (+1 more)
AirLocUnclock/V1/: Inscription.html  Login.html  contacts.html  index.html  services.html
AirLocUnclock/V2/: MettreEnLoc.html  contacts.html  index-2.html  index.html
App_airlocunlock/app/: build.gradle
Préz/: index.html
Tapkey/Serrure/Code/V3/: CMakeLists.txt
Tapkey/Serrure/Code/V3/Card/: Card.h
Tapkey/Serrure/Code/V3/Card/ModuleBluetooth/: ModuleBluetooth.cpp
Tapkey/Serrure/Code/V3/Motor/: Motor.ino
Tapkey/Serrure/Code/V3/SystemDoor/: SystemDoor.cpp  SystemDoor.h  SystemDoor.ino
Tapkey/SmartLock/: Led.cpp  Led.h  ModuleBluetooth.cpp  ModuleBluetooth.h  Motor.cpp  Motor.h  SmartLock.cpp  SmartLock.h  SmartLock.ino
api-airlocunlock/: clients.php  ex_clients.json  ex_reservations.json  reservations.php
api-airlocunlock/clients/: creer.php  lire.php  lire_un.php  modifier.php  supprimer.php  verif.php
api-airlocunlock/config/: database.php
api-airlocunlock/models/: gestionClients.php  gestionReservations.php
api-airlocunlock/reservations/: creer.php  lire.php  lire_un.php  modifier.php  supprimer.php  verif.php
assets/js/: affichemap.js
(+355 files in other folders)
